changed documentation to use query parameters instead of path parameters. update readme with new docs link.
